# edgeplat-nodes-zmq_out

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  Dockerfile_GPU  main  run.sh
docker/lib/x64-linux/: libhalconcxl.so.20.11.3
include/: DataFrame.h  TcpServer.h
include/lib/: Qt5RepParser.la  Qt5UiPlugin.la  libQt53DAnimation.la  libQt53DAnimation.prl  libQt53DCore.la  libQt53DCore.prl  libQt53DCore.so.5  libQt53DExtras.la  libQt53DExtras.prl  libQt53DExtras.so.5.12  libQt53DInput.la  libQt53DInput.prl  libQt53DInput.so.5  libQt53DLogic.la  libQt53DLogic.prl  libQt53DQuick.la  libQt53DQuick.prl  libQt53DQuickAnimation.la  libQt53DQuickAnimation.prl  libQt53DQuickExtras.la  libQt53DQuickExtras.prl  libQt53DQuickExtras.so.5  libQt53DQuickInput.la  libQt53DQuickInput.prl  libQt53DQuickInput.so.5.12.12  libQt53DQuickRender.la  libQt53DQuickRender.prl  libQt53DQuickRender.so.5.12.12  libQt53DQuickScene2D.la  libQt53DQuickScene2D.prl  libQt53DQuickScene2D.so.5.12  libQt53DRender.la  libQt53DRender.prl  libQt5AccessibilitySupport.la  libQt5AccessibilitySupport.prl  libQt5Bluetooth.la  libQt5Bluetooth.prl  libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5Concurrent.la  (+154 more)
include/lib/pkgconfig/: Qt53DAnimation.pc  Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickAnimation.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DQuickScene2D.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Designer.pc  Qt5Gamepad.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  (+33 more)
lib/: libccd.so.bak
src/: TcpServer.cpp  TcpServer.h  main.cpp
src/handler/: BaseHandler.cpp  BaseHandler.h  ZmqOutHandler.cpp  ZmqOutHandler.h  tools.hpp
test/: build_deeplearn_fp_fn.sh  build_halcon_coarse_filter.sh  build_halcon_fp_fn.sh  buildtestreload.sh  deeplearn_fp_fn.cc  halcon_coarse_filter.cc  halcon_fp_fn.cc  main.cc  matching  single.cc  test.cc  testpull.py  testpulljson.py  testreload.cc
test/lbdl/: build.sh  main  main.cc
test/mat/: jpeg2mat.cc  mat
test/mock/: mockcamera.sh  mocksendimage.py  mocksendimage.py.bak
(+6 files in other folders)
